--- a/config.json
+++ b/config.json
@@ -35,8 +35,8 @@
     "bio_prompt": true,
     "emo_prompt": true,
     "empathy_prompt": true,
-    "prompt_names": ["prompt_bio", "prompt_emo", "prompt_emp"],
-    "sep": false,
+    "prompt_names_before_SEP": ["prompt_bio", "prompt_emp", "prompt_emo"],
+    "prompt_names_after_SEP": [],
     "n_last_cls": 4,
     "mean_last_cls": false,
     "concat_local_features": false,
