--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "num_labels": 1,
+    "num_labels": 2,
     "model_id": "roberta_emp",
     "model_class_string": "RobertaPretrainedModel",
-    "model_name": "roberta-empathy",
+    "model_name": "bdotloh/roberta-base-empathy",
     "emo_count_global": true,
     "empathy_count_global": true,
     "distress_count_global": true,
